--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0",
-    "web3": "^4.0.2"
+    "web3": "1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
